FEAT: added endpoints for jokes
