# internal/domain/entity/common/base_entity.go
@@ -1,0 +1,19 @@
+package common
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type BaseEnity struct {
+	ID        string
+	CreatedAt time.Time
+}
+
+func NewBaseEnity() *BaseEnity {
+	return &BaseEnity{
+		ID:        uuid.NewString(),
+		CreatedAt: time.Now(),
+	}
+}
