# internal/port/http/dto/user.go
@@ -3,6 +3,7 @@ package dto
 import (
 	"github.com/abc-valera/flugo-api-golang/gen/ogen"
 	"github.com/abc-valera/flugo-api-golang/internal/domain/entity"
+	"github.com/abc-valera/flugo-api-golang/internal/port/http/dto/common"
 )
 
 func NewUserResponse(user *entity.User) *ogen.User {
@@ -10,10 +11,11 @@ func NewUserResponse(user *entity.User) *ogen.User {
 		return &ogen.User{}
 	}
 	return &ogen.User{
-		ID:       user.ID,
-		Username: user.Username,
-		Email:    user.Email,
-		Fullname: ogen.NewOptString(user.Fullname),
-		Status:   ogen.NewOptString(user.Status),
+		ID:        user.ID,
+		Username:  user.Username,
+		Email:     user.Email,
+		Fullname:  common.NewOptString(user.Fullname),
+		Status:    common.NewOptString(user.Status),
+		CreatedAt: user.CreatedAt,
 	}
 }
